[workspace]
members = [
    "ft8-bench",
    "ft8-web",
]
exclude = [
    "ft8-desktop/src-tauri",
]
resolver = "2"

# Library layer lives in https://github.com/jl1nie/mfsk-core and is
# published to crates.io as `mfsk-core` (0.1.0 and onwards).
[workspace.dependencies]
mfsk-core = { version = "0.1", default-features = false }

# Local-development override: if you have mfsk-core cloned as a sibling
# directory (../mfsk-core), uncomment this block to use the working tree
# instead of the crates.io-fetched copy. Keep commented in the checked-in
# file so CI / fresh clones default to the published version.
#
# [patch.crates-io]
# mfsk-core = { path = "../mfsk-core/mfsk-core" }
