[workspace]
members = [
    "ft8-bench",
    "ft8-web",
    "uvpacket-web",
]
exclude = [
    "ft8-desktop/src-tauri",
]
resolver = "2"

[workspace.dependencies]
mfsk-core = { version = "0.6", default-features = false }

# Workspace-wide release profile for the WASM cdylibs.
#
# `opt-level = 3` (was `"z"`): LDPC BP+OSD-2 is tight FP/integer-bit
# math and benefits substantially from full inlining + loop-vectorise
# style optimisation. Field measurement on uvpacket-web showed
# `~117 ms/attempt` at `"z"`; with `"3"` that should drop ~30-40 %.
# The wasm-pack output size goes up ~30 % but the network cost is
# dominated by LDPC tables and rustfft, not the codegen, so the user-
# facing diff is small.
#
# `lto = true` keeps the cross-crate inlining pass that lets mfsk-core
# routines vanish across the wasm-bindgen boundary.
[profile.release]
opt-level = 3
lto = true
