[package]
name = "fst4-core"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "WebFT8 — FST4 protocol scaffold (60-second T/R period). LDPC(240,101) tables pending WSJT-X transcription; trait + Costas layout + DSP routing shipping."

[dependencies]
mfsk-core = { path = "../mfsk-core" }
mfsk-fec = { path = "../mfsk-fec" }
mfsk-msg = { path = "../mfsk-msg" }
