[package]
name = "ft8-bench"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "WebFT8 benchmark and FT8 simulation suite"

[dependencies]
ft8-core = { path = "../ft8-core" }
ft4-core = { path = "../ft4-core" }
mfsk-core = { path = "../mfsk-core" }
mfsk-msg = { path = "../mfsk-msg" }
hound = "3"
