[package]
name = "ft8-web"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "WebFT8 WASM bindings for browser deployment"

[lib]
crate-type = ["cdylib"]

[dependencies]
ft8-core = { path = "../ft8-core", default-features = false }
ft4-core = { path = "../ft4-core" }
wspr-core = { path = "../wspr-core" }
mfsk-core = { path = "../mfsk-core", default-features = false }
mfsk-msg = { path = "../mfsk-msg" }
wasm-bindgen = "0.2"
js-sys = "0.3"

[profile.release]
opt-level = "z"
lto = true
