[package]
name = "ft8-web"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "WebFT8 WASM bindings for browser deployment"

[lib]
crate-type = ["cdylib"]

[dependencies]
mfsk-core = { workspace = true, default-features = false, features = ["ft8", "ft4", "wspr", "q65"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
