[package]
name = "jt9-core"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "WebFT8 — JT9 protocol implementation on the mfsk-* stack (9-FSK, convolutional r=1/2 K=32 + Fano, 72-bit message)."

[dependencies]
mfsk-core = { path = "../mfsk-core" }
mfsk-fec = { path = "../mfsk-fec" }
mfsk-msg = { path = "../mfsk-msg" }
rustfft = "6"
num-complex = "0.4"
