[package]
name = "mfsk-msg"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Message codecs (WSJT 77-bit, JT 72-bit, WSPR 50-bit) and callsign hash tables"

[features]
default = []
## Enables the OSD-3 fallback on AP decodes with heavy lock (≥55 bits).
## Off by default to keep the decoder light (FT4 spirit); turning it on
## recovers ~0.5 dB at the -18 dB AP floor at ~25% extra runtime.
osd-deep = []
## Enables the non-EQ fallback inside `EqMode::Adaptive`. Doubles the
## single-candidate decode cost; small (~1/20) threshold gain at -18 dB.
eq-fallback = []

[dependencies]
mfsk-core = { path = "../mfsk-core" }
num-complex = "0.4"
